# al-quran

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  apps.py  models.py  permissions.py  pyproject.toml  requirements.txt  serializers.py  tests.py  urls.py  views.py
.github/workflows/: django.yml
al_quran/: __init__.py  apps.py  urls.py
al_quran/authors/: __init__.py  apps.py  models.py  serializers.py  views.py
al_quran/books/: __init__.py  apps.py  models.py  serializers.py  views.py
al_quran/categories/: apps.py  models.py  serializers.py  views.py
al_quran/chapters/: __init__.py  apps.py  models.py  serializers.py  views.py
al_quran/cms/: __init__.py  apps.py  blocks.py  wagtail_hooks.py
al_quran/comp/: __init__.py  urls.py
al_quran/core/: __init__.py  apps.py  urls.py
al_quran/groups/: __init__.py  apps.py  models.py  serializers.py  views.py
al_quran/i18n/: __init__.py  urls.py
al_quran/items/: __init__.py  apps.py  models.py  serializers.py  views.py
al_quran/ui/: apps.py  (+5 more)
chapters/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
groups/: models.py  serializers.py  urls.py  views.py
pages/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
parts/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
quarters/: models.py  serializers.py  urls.py  views.py
quran_api/: __init__.py  apps.py  urls.py
scripts/: __init__.py  load_chapters.py  load_pages.py  load_quran.py  load_verses.py
subparts/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
tests/: __init__.py  test_models.py  test_views.py
verses/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
(+489 files in other folders)
